Updatre add manifest-512x
Updatre add manifest-512x

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -7,8 +7,8 @@
   "background_color": "#000000",
   "theme_color": "#000000",
   "icons": [{
-    "src": "/favicon.ico",
-    "sizes": "32x32",
+    "src": "/favicon-512x512.png",
+    "sizes": "512x512",
     "type": "image/png",
     "purpose": "any maskable"
   }]
