--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ethsea",
+  "name": "nextjs-starter",
   "version": "0.24",
   "private": true,
   "scripts": {
@@ -23,6 +23,6 @@
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "^3.3.0"
   },
-  "author": "Indonesia Crypto Network",
+  "author": "Ark Ikky",
   "license": "MIT"
 }
