--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
   "dependencies": {
     "next": "14.0.3",
     "react": "^18",
-    "react-dom": "^18",
-    "react-fast-marquee": "^1.6.2",
-    "react-scroll": "^1.9.0"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
