--- a/.env.production
+++ b/.env.production
@@ -1,7 +1,7 @@
 # Configuration
 NEXT_PUBLIC_SITE_APP_NAME="Next.js Starter"
 NEXT_PUBLIC_SITE_APP_VERSION=1.24
-NEXT_PUBLIC_DOMAIN="ethsea.com"
+NEXT_PUBLIC_DOMAIN="projects-starter.vercel.app/"
 NEXT_PUBLIC_SITE_URL="https://projects-starter.vercel.app/"
 NEXT_PUBLIC_SITE_TITLE="Next.js Starter"
 NEXT_PUBLIC_SITE_DESC="Next.js provides a variety of starter templates that can be used as a basis for your Next.js project. This starter template helps you get started quickly and includes commonly used initial configurations."
